<resources>
    <string name="app_name">NeWork</string>
    <string name="titleMain">NeWork!</string>
    <string name="test_title">Нетология. Университет интернет-профессий</string>
    <string name="test_date_published">21 мая в 18:36</string>
    <string name="test_content">Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов.</string>
    <string name="test_counter">123.4K</string>
    <string name="error_empty_content">Error! Content can\'t be empty</string>
    <string name="edit_text_hint">Post text</string>
    <string name="description_by_back_text">No save</string>
    <string name="description_button_confirm">Confirm</string>
    <string name="description_button_back">Back</string>
    <string name="post_menu_edit">Edit</string>
    <string name="post_menu_remove">Remove</string>
    <string name="post_text_title">Title</string>
    <string name="post_text_time">Now</string>
    <string name="avatar">Avatar</string>
    <string name="add">Add</string>
    <string name="chooser_share_post">Export post text</string>
    <string name="channel_remote_name">My channel remote name</string>
    <string name="channel_remote_description">Channel remote description</string>
    <string name="notification_user_liked">%1$s liked post %2$s</string>
    <string name="notification_user_sending_post">%1$s published a new post:</string>
    <string name="error_loading">Error loading</string>
    <string name="empty_posts">Posts not found</string>
    <string name="retry_loading">Retry loading</string>
    <string name="on_success">Success</string>
    <string name="on_failure">Error</string>
    <string name="newer_posts">Свежие записи</string>
    <string name="play_video">Play Video</string>
    <string name="description_photo">Description photo</string>
    <string name="remove">Remove</string>
    <string name="description_select_image">Select image</string>
    <string name="description_take_photo">Take photo</string>
    <string name="menu_save">Save</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_author_name">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Repeat password</string>
    <string name="upload_avatar">Upload Avatar</string>
    <string name="error_password_not_ident">Password not ident</string>
    <string name="are_you_suare">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">Not</string>
    <string name="eror_code">Error code</string>
    <string name="not_pass_enter">Неверный логин или пароль</string>
    <string name="action_not_allowed">Action not allowed for anonym</string>
    <string name="back">Back</string>
    <string name="hint_enter_name">Name</string>
    <string name="add_description">Add description</string>
    <string name="post_fragment">Posts</string>
    <string name="events_fragment">Events</string>
    <string name="users_fragment">Users</string>
    <string name="profile_fragment">Profile</string>
    <string name="error_upload">Error upload</string>
    <string name="play_audio">Play audio</string>
    <string name="hint_link">Link</string>
    <string name="post_content">Content</string>
    <string name="login_user_hint">login</string>
    <string name="name_user_hint">Name</string>
    <string name="id_user_hint">[NN]</string>
    <string name="description_mentions_count">mentions_count</string>
    <string name="event_date_hint">Date:</string>
    <string name="event_format_hint">Format: </string>
    <string name="speakers">Speakers</string>
    <string name="party">Audience</string>
    <string name="join">Join</string>
    <string name="un_join">Nope!</string>
    <string name="description_image_attachment">Place for image</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="date_event_hint">YYYY-MM-DD</string>
    <string name="time_event_hint">HH:mm</string>
    <string name="not_value_event">List is empty</string>
    <string name="leave">Leave</string>
    <string name="job_organization_title">Company:</string>
    <string name="job_position_title">Position:</string>
    <string name="job_working_period">Working:</string>
    <string name="job_link">link</string>
    <string name="job_organization_hint">Place for working</string>
    <string name="job_position_hint">Position</string>
    <string name="job_working_period_hint">Start working date - End working date</string>
    <string name="job_working_period_start">Start (YYYY-MM-DD)</string>
    <string name="job_working_period_end">End (YYYY-MM-DD)</string>
    <string name="job_description">Jobs: </string>
    <string name="event_description">Events:</string>
    <string name="post_description">Posts:</string>
    <string name="job_remove">Remove</string>
    <string name="job_edit">Edit</string>
    <string name="no_posts">Not activity in post</string>
    <string name="no_events">Not activity in events</string>
    <string name="no_jobs">Jobs not publicated</string>
    <string name="description_select_audio">Select audio</string>
    <string name="description_select_video">Select video</string>
    <string name="description_select_users">Select users</string>
    <string name="description_select_attachment">Select attachment</string>
    <string name="description_select_location">Select location</string>
    <string name="not_selected_coordinates">No coordinates selected</string>
    <string name="need_geolocation">You need geolocation permission to use this feature</string>
    <string name="permission">Permission</string>
    <string name="no_user_location_error">Can\'t find your location yet</string>
    <string name="choose_date">Choose_date</string>
    <string name="choose_time">Choose_time</string>
    <string name="empty_events">Events not found</string>
    <string name="empty_jobs">Jobs not found</string>
    <string name="tab_posts">Wall</string>
    <string name="tab_events">Events</string>
    <string name="tab_jobs">Jobs</string>
    <string name="my_profile">My profile</string>

</resources>