<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_margin"
    android:background="@drawable/rounded_background"
    android:padding="@dimen/small_margin"
    tools:context=".activities.FeedFragment">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/av_size"
        android:layout_height="@dimen/av_size"
        android:background="@android:color/transparent"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/netology" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/date_published"
        app:layout_constraintEnd_toStartOf="@+id/more_vert"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        tools:text="@string/test_title" />

    <TextView
        android:id="@+id/date_published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toStartOf="@+id/more_vert"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="@string/test_date_published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/more_vert"
        style="@style/Widget.AppTheme.MoreButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:textSize="0sp"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, date_published, title, more_vert" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/attachment_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/barrier1"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/image_attachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:contentDescription="@string/description_image_attachment"
            android:paddingVertical="@dimen/medium_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_video"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/description_attachment"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/play_audio"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/play_button_post_audio"
            app:layout_constraintTop_toBottomOf="@+id/image_attachment"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_button_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/play_video"
            android:foregroundTint="@color/white"
            android:src="@drawable/ic_play_circle"
            app:backgroundTint="@color/purple2"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_button_post_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/play_video"
            android:foregroundTint="@color/white"
            android:src="@drawable/ic_play_circle"
            android:visibility="gone"
            app:backgroundTint="@color/purple4"
            app:fabCustomSize="40dp"
            app:layout_constraintBottom_toBottomOf="@id/description_attachment"
            app:layout_constraintEnd_toStartOf="@id/description_attachment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/description_attachment" />

        <VideoView
            android:id="@+id/video_attachment"
            android:layout_width="400dp"
            android:layout_height="225dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="attachment_content" />

    <!--<TextView
        android:id="@+id/event_date_hint"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:paddingVertical="@dimen/medium_margin"
        android:text="@string/event_date_hint"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/barrier2" />

    <TextView
        android:id="@+id/event_format_hint"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:paddingVertical="@dimen/medium_margin"
        android:text="@string/event_format_hint"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/event_date_hint" />-->

    <TextView
        android:id="@+id/event_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/event_format_value"
        tools:text="@string/test_date_published" />

    <TextView
        android:id="@+id/event_format_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        tools:text="@string/online" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="event_format_value, event_date_value" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:paddingVertical="@dimen/medium_margin"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/barrier3"
        tools:text="@string/test_content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/barrier4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/speakers_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/speakers"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toStartOf="@id/party_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/party_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/party"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toStartOf="@id/join_button"
            app:layout_constraintStart_toEndOf="@id/speakers_button"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/join_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/join"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/party_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="buttons" />

    <TextView
        android:id="@+id/links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textColor="@color/purple2"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/barrier5" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="links" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:textSize="16sp"
        app:icon="@drawable/ic_liked_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:textSize="16sp"
        app:icon="@drawable/ic_shared_24"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier6" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="like, share" />

    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/barrier7"
        android:visibility="gone"
        tools:visibility="visible">

        <include
            android:id="@+id/map_view_post"
            layout="@layout/fragment_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/selected_coords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="8dp"
            android:text="@string/not_selected_coordinates"
            android:textAlignment="center"
            android:textSize="16sp" />
    </FrameLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_open_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="title,date_published,content, event_date_value, event_format_value"
        tools:ignore="NotSibling" />

</androidx.constraintlayout.widget.ConstraintLayout>